--- a/appNetworking/app/src/main/res/layout/activity_joke.xml
+++ b/appNetworking/app/src/main/res/layout/activity_joke.xml
@@ -27,10 +27,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="162dp"
+        android:layout_marginTop="150dp"
         android:layout_marginEnd="161dp"
         android:layout_marginBottom="300dp"
         android:text="@string/chiste"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvJoke" />
 </androidx.constraintlayout.widget.ConstraintLayout>
